PROJECT(ProMC)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" )

SET(CMAKE_CXX_FLAGS "-g -Wall -Werror -std=c++11")

set(PROMC_BUILD_PROMC   ON CACHE BOOL "Build the Default PROMC data model") 
set(PROMC_BUILD_EIC     OFF CACHE BOOL "Build the EIC data model") 
set(PROMC_BUILD_NLO     ON  CACHE BOOL "Build the NLO data model") 

set(ProMC_MAJOR_VERSION 1)
set(ProMC_MINOR_VERSION 6)
set(ProMC_PATCH_VERSION 0)
SET(ProMC_VERSION "${ClasDigi_MAJOR_VERSION}.${ClasDigi_MINOR_VERSION}.${ClasDigi_PATCH_VERSION}")

ADD_SUBDIRECTORY(proto)

#ADD_EXECUTABLE(main main.cpp)
#TARGET_LINK_LIBRARIES(main proto ${PROTOBUF_LIBRARY})
