INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
#FIND_PACKAGE(LIBZIP REQUIRED)
#FIND_PACKAGE(ZipIos REQUIRED)
#ZIPIOSCC_LIBRARY     
#ZIPIOSCC_DEFINITIONS 
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} )#${ZIPIOSCC_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR} . ${CMAKE_CURRENT_BINARY_DIR} )#${ZIPIOSCC_INCLUDE_DIR})
#
#SET(ProMC_FILES
#  ProMCBook
#  )
#
#message("PROMC_BUILD_EIC = ${PROMC_BUILD_EIC}")
#message("PROMC_BUILD_NLO = ${PROMC_BUILD_NLO}")

if( PROMC_BUILD_PROMC )

  SET(PROMC_LIBNAME pronlo)

  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/../ProMCBook.h.in ProMCBook.h)
  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/../ProMCBook.cc.in ProMCBook.cc)

  FILE(GLOB ProMC_ProtoFiles "${CMAKE_CURRENT_SOURCE_DIR}/${PROMC_LIBNAME}.proto")

  PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${ProMC_ProtoFiles})
  PROTOBUF_GENERATE_PYTHON(PROTO_PY ${ProMC_ProtoFiles})


  SET(lib_VERSION "${${PROJECT_NAME}_VERSION}")
  SET(lib_MAJOR_VERSION "${${PROJECT_NAME}_MAJOR_VERSION}")
  SET(lib_LIBRARY_PROPERTIES 
    VERSION "${lib_VERSION}"
    SOVERSION "${lib_MAJOR_VERSION}"
    SUFFIX ".so")

  #SET(ProMC_FILES_SOURCE)
  #SET(ProMC_FILES_HEADER)
  #FOREACH(f ${ProMC_FILES})
  #  #MESSAGE(" file : ${f}")
  #  SET(ProMC_FILES_MAIN "${ProMC_FILES_MAIN}     ../${f}")
  #  SET(ProMC_FILES_SOURCE "${ProMC_FILES_SOURCE} ../${f}.cc")
  #  SET(ProMC_FILES_HEADER "${ProMC_FILES_HEADER} ../${f}.h")
  #ENDFOREACH()
  #MESSAGE("$ProMC_FILES_SOURCE ${ProMC_FILES_SOURCE}")

  ADD_LIBRARY(${PROMC_LIBNAME} SHARED  ${PROTO_SRC} ${PROTO_HEADER} ProMCBook.h ProMCBook.cc  )
  TARGET_LINK_LIBRARIES(${PROMC_LIBNAME} ${PROTOBUF_LIBRARIES})
  SET_TARGET_PROPERTIES(${PROMC_LIBNAME} PROPERTIES ${lib_LIBRARY_PROPERTIES})
  #ADD_DEPENDENCIES(promc ${PROTO_HEADER} ${PROTO_SRC})

  INSTALL( TARGETS ${PROMC_LIBNAME} DESTINATION lib )
  INSTALL( FILES ${PROTO_HEADER} DESTINATION include/${PROJECT_NAME}/${PROMC_LIBNAME} )

  FIND_PROGRAM(PYTHON "python")
  IF (PYTHON)
    SET(SETUP_PY_IN "${CMAKE_CURRENT_SOURCE_DIR}/../setup.py.in")
    SET(SETUP_PY    "${CMAKE_CURRENT_BINARY_DIR}/setup.py")
    SET(DEPS        "${CMAKE_CURRENT_SOURCE_DIR}/__init__.py" ${PROTO_PY})
    SET(OUTPUT      "${CMAKE_CURRENT_BINARY_DIR}/build/timestamp")

    CONFIGURE_FILE(${SETUP_PY_IN} ${SETUP_PY})

    ADD_CUSTOM_COMMAND(OUTPUT ${OUTPUT}
      COMMAND ${PYTHON} ${SETUP_PY} build
      COMMAND ${CMAKE_COMMAND} -E touch ${OUTPUT}
      DEPENDS ${DEPS})
      message("${DEPS}  ") 

    ADD_CUSTOM_TARGET(${PROMC_LIBNAME}_target ALL DEPENDS ${OUTPUT})

    INSTALL(CODE "execute_process(COMMAND ${PYTHON} ${SETUP_PY} install --prefix=${CMAKE_INSTALL_PREFIX})")
  ENDIF()
ENDIF()

